styles.css
/* ... */
#panorama-background canvas {
    display: block;
}

.smp-image {
    width: 100%;
    height: 685px;
    object-fit: cover;
    display: block;

}

.image-container .mc-button {
    position: absolute;
    scale: 1.4;
    transform: translate(-50%, -50%);
    z-index: 2;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
}

.small-text {
    color: darkgray;
    font-family: "MCItalic", sans-serif;
    font-size: 1.2rem;
    margin: 0;
    text-shadow: 2px 2px rgba(32, 32, 32)
}

/* Button CSS */
.button-wrapper {
    position: absolute;
    bottom: 5%;
    z-index: 10;

    display: flex;
    flex-direction: column;
    align-items: center;
}

.title-button-wrapper {
    scale: 1.2;
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 50;
}


.mc-button {
    cursor: pointer;
    height: var(--btn-size);
    width: calc(var(--btn-size) * 10);
    background: #999 url("https://i.ibb.co/rb2TWXL/bgbtn.png") center / cover;
    image-rendering: pixelated;
    border: 2px solid #000;

    display: flex;
    justify-content: center;
    align-items: center;

    box-shadow:
        inset -2px -4px #0006,
        inset 2px 2px #fff7;
}


.small-text {
    color: darkgray;
    font-family: "MCItalic", sans-serif;
    text-align: center;
    font-size: 1.2rem;
    margin: 0;
    width: 100%;
    text-shadow: 2px 2px rgba(32, 32, 32)
}

.mc-button-link {
    display: block;
}

.title-button-wrapper {
    position: absolute;
    top: 600px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 50;
    filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.8));
}

.mc-button {
    height: var(--btn-size);
    width: calc(var(--btn-size) * 10);
    cursor: pointer;
    overflow: hidden;
    white-space: nowrap;
    user-select: none;
    background: #999 url("https://i.ibb.co/rb2TWXL/bgbtn.png") center / cover;
    image-rendering: pixelated;
    border: 2px solid #000;
    display: inline-block;
}

.mc-button:hover .title {
    background-color: rgba(100, 100, 255, 0.45);
    text-shadow: 1px 1px rgba(32, 32, 32);
    color: #ffffa0;
}

.mc-button:active .title {
    box-shadow:
        inset -2px -4px #0004,
        inset 2px 2px #fff5;
}

.mc-button .title {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 0.5em;
    font-size: 2.5;
    font-family: MCRegular, monospace;
    color: #ddd;
    text-shadow: 1px 1px #000a;
    box-shadow:
        inset -2px -4px #0006,
        inset 2px 2px #fff7;
}

.mc-button.full {
    width: 100%;
}

.mc-button.lang img {
    width: 26px;
    height: 26px;
}

.mc-button.lang .title {
    padding-bottom: 0;
}

/* hover effect (features) */
.square-with-text:hover {
    transform: translateY(-6px) scale(1.05);
}


/* Squares */
.square-row {
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
    justify-content: center;
    align-items: stretch;
    width: 100%;
}

.square-with-text {
    width: 200px;
    display: flex;
    flex-direction: column;
    
        transition: transform 0.25s ease, box-shadow 0.25s ease;
}

.square {
    width: 119%;
    aspect-ratio: 1 / 1;
    border: 4px solid #0006;
    overflow: hidden;
    background: #00000033;
    box-sizing: border-box;

}

.square img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    box-shadow:
        inset -4px -4px #ffffff,
        inset 4px 4px #3e3e3e;
}

.square-text {
    margin-top: 8px;
    padding: 12px;
    width: 119%;
    flex: 1;
    background: #9d9d9d;
    color: white;
    font-family: "MCRegular", sans-serif;
    font-size: 0.9rem;
    line-height: 1.2;
    box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.2);
    box-sizing: border-box;
    box-shadow:
        inset -4px -4px #ffffff,
        inset 4px 4px #3e3e3e;
}

.square-text h3 {
    margin: 0 0 6px 0;
    font-family: "MCBold", sans-serif;
}

.staff-section {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 25px;
    margin: 40px auto;
    width: 100%;
    max-width: 1100px;
    align-content: center;
    justify-content: center;
}

/* Main staff card */
.staff-card {
    display: flex;
    gap: 20px;
    padding: 15px;
    background: #9d9d9d;
    box-shadow:
        inset -4px -4px #ffffff,
        inset 4px 4px #3e3e3e;
    align-items: left;
}

.staff-card {
    transition: transform 0.25s ease;
}

.staff-card:hover {
    transform: translateY(-6px) scale(1.05);
}

/* Main rule card */
.rule-card {
    display: flex;
    gap: 20px;
    padding: 15px;
    margin-bottom: 15px;
    background: #9d9d9d;
    /*border: 2px solid #000;*/
    box-shadow:
        inset -4px -4px #ffffff,
        inset 4px 4px #3e3e3e;
    align-items: center;
}

.join-card {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 38px;
    background: #9d9d9d;
    box-shadow:
        inset -4px -4px #ffffff,
        inset 4px 4px #3e3e3e;
    text-align: center;
}

.changelog-card {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 60%;
    padding: 22px;
    background: #9d9d9d;
    box-shadow:
        inset -4px -4px #ffffff,
        inset 4px 4px #3e3e3e;
    text-align: center;
}

.rule-info h2 {
    font-family: "MCBold", sans-serif;
    margin: 0 0 5px 0;
    font-size: 1.4rem;
    color: white;
    text-shadow:2px 2px rgba(32, 32, 32)
}

.rule-info p {
    font-weight: bold;
}

.rule-img {
    width: 100px;
    height: 100px;
    filter: drop-shadow(0px 6px 8px rgba(0, 0, 0, 0.7));
}

.rule-card {
    transition: transform 0.25s ease;
}

.rule-card:hover {
    transform: translateY(-6px) scale(1.01);
}


/* Opposite direction (image on right) */
.staff-card.reverse {
    flex-direction: row-reverse;
}

/* Staff images */
.staff-img {
    width: 120px;
    height: 120px;
    border: 2px solid black;
    object-fit: cover;
    background: #00000033;
    box-shadow:
     4px 4px black,
    
}
/* ... */

